--- a/app/src/main/res/values-v26/styles.xml
+++ b/app/src/main/res/values-v26/styles.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
-    <style name="styleTextViewTitle">
+<resources xmlns:tools="http://schemas.android.com/tools">
+
+    <style name="styleTextViewTitle" tools:ignore="DuplicateDefinition">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">0dp</item>
         <item name="android:layout_weight">1</item>
@@ -10,7 +11,9 @@
         <item name="android:background">#D9EFD9</item>
         <item name="android:textAlignment">viewEnd</item>
         <item name="android:textSize">24sp</item>
+        <item name="android:paddingHorizontal">8dp</item>
     </style>
+
     <style name="styleEditText1">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">0dp</item>
@@ -22,18 +25,7 @@
         <item name="android:backgroundTint">@color/pink_500</item>
         <item name="android:textAlignment">viewEnd</item>
         <item name="android:textSize">24sp</item>
+        <item name="android:paddingHorizontal">8dp</item>
     </style>
-    <style name="styleButton1">
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">0dp</item>
-        <item name="android:layout_weight">2</item>
-        <item name="android:textColor">@color/white</item>
-        <item name="android:backgroundTint">@color/pink_500</item>
-        <item name="android:layout_marginStart">8dp</item>
-        <item name="android:layout_marginEnd">8dp</item>
-        <item name="android:layout_marginTop">4dp</item>
-        <item name="android:layout_marginBottom">4dp</item>
-        <item name="android:textAlignment">center</item>
-        <item name="android:textSize">24sp</item>
-    </style>
+
 </resources>
