--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="pink_500">#E91EAF</color>
+    <color name="pink_700">#9E2A7C</color>
+    <color name="green_700">#0B5C0F</color>
+    <color name="green_200">#8CB38D</color>
 </resources>
