--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -20,6 +20,8 @@
         <item name="android:layout_marginEnd">8dp</item>
         <item name="android:ems">10</item>
         <item name="android:backgroundTint">@color/pink_500</item>
+        <item name="android:textColorHighlight">@color/pink_100</item>
+        <item name="android:textColor">@color/gray</item>
         <item name="android:textAlignment">viewEnd</item>
         <item name="android:textSize">24sp</item>
     </style>
