--- a/app/src/main/res/layout/activity_show_info.xml
+++ b/app/src/main/res/layout/activity_show_info.xml
@@ -1,9 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="300dp"
+    android:orientation="vertical"
+    android:paddingVertical="8dp"
     tools:context=".ShowInfoActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        style="@style/styleTextViewTitle"
+        tools:text="مشاهده اطلاعات ثبت شده"/>
+    <TextView
+        android:id="@+id/tv_full_name"
+        tools:text="name"
+        style="@style/styleTextView1"/>
+    <TextView
+        android:id="@+id/tv_national_code"
+        tools:text="name"
+        style="@style/styleTextView1"/>
+    <TextView
+        android:id="@+id/tv_birth_place"
+        tools:text="birth place"
+        style="@style/styleTextView1"/>
+    <TextView
+        android:id="@+id/tv_address"
+        tools:text="address"
+        style="@style/styleTextView1"/>
+    <TextView
+        android:id="@+id/tv_zip_code"
+        tools:text="zip code"
+        style="@style/styleTextView1"/>
+    <TextView
+        android:id="@+id/tv_gender"
+        tools:text="gender"
+        style="@style/styleTextView1"/>
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btn_edit_info"
+        style="@style/styleButton1"
+        android:text="ثبت اطلاعات" />
+</LinearLayout>
