--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,8 @@
         <item name="android:layout_weight">1</item>
         <item name="android:layout_marginStart">8dp</item>
         <item name="android:layout_marginEnd">8dp</item>
+        <item name="android:layout_marginTop">8dp</item>
+        <item name="android:layout_marginBottom">8dp</item>
         <item name="android:textColor">#218025</item>
         <item name="android:background">#D9EFD9</item>
         <item name="android:textAlignment">viewEnd</item>
@@ -22,6 +24,21 @@
         <item name="android:backgroundTint">@color/pink_500</item>
         <item name="android:textColorHighlight">@color/pink_100</item>
         <item name="android:textColor">@color/gray</item>
+        <item name="android:textAlignment">viewEnd</item>
+        <item name="android:textSize">24sp</item>
+    </style>
+    <style name="styleTextView1">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">0dp</item>
+        <item name="android:layout_weight">2</item>
+        <item name="android:layout_marginStart">8dp</item>
+        <item name="android:layout_marginEnd">8dp</item>
+        <item name="android:layout_marginTop">8dp</item>
+        <item name="android:layout_marginBottom">8dp</item>
+        <item name="android:ems">10</item>
+        <item name="android:textColorHighlight">@color/pink_100</item>
+        <item name="android:textColor">@color/gray</item>
+        <item name="android:background">@color/gray_100</item>
         <item name="android:textAlignment">viewEnd</item>
         <item name="android:textSize">24sp</item>
     </style>
