--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,8 @@
     <color name="pink_100">#FFDCF5</color>
     <color name="pink_700">#9E2A7C</color>
     <color name="gray">#4C4C4C</color>
+    <color name="red">#F11C1C</color>
+    <color name="yellow">#FFC107</color>
     <color name="gray_100">#E1E1E1</color>
     <color name="green_700">#0B5C0F</color>
     <color name="green_200">#8CB38D</color>
